Add asset-classes, portfolios, sub-portfolios and allocations ednpoints
